<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ProjectCreateActivity">

    <LinearLayout
        android:id="@+id/llFloatingBelowTopAlert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/behavior_shrink_below_top_alert">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#ccc"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtCreateProjectName"
                style="@style/FullWidthEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:gravity="left"
                android:hint="@string/project_name"
                android:inputType="textCapWords"
                android:lines="1"
                android:maxLines="1"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/txtCreateProjectDescription"
                style="@style/FullWidthEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/general_description"
                android:inputType="textCapSentences|textMultiLine"
                android:minLines="10"
                android:scrollbars="vertical"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <View
            style="@style/DividerLight"
            android:background="#ccc" />

        <FrameLayout
            android:id="@+id/flColorSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="#fff"
            android:gravity="center"
            android:padding="6dp">

            <Button
                android:id="@+id/btnCreateProjectColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/button_smooth_style_color"
                android:drawableLeft="@mipmap/rgb_circle"
                android:drawablePadding="8dp"
                android:drawableStart="@mipmap/rgb_circle"
                android:paddingEnd="18dp"
                android:paddingLeft="12dp"
                android:paddingRight="18dp"
                android:paddingStart="12dp"
                android:text="@string/create_project_color"
                android:textSize="14sp" />

        </FrameLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>