<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#fff"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="48dp"
            android:layout_weight="0"
            android:text="@string/dialog_time_span_picker_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
            tools:ignore="NestedWeights,RtlHardcoded" />

        <TextView
            android:id="@+id/txtProjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="right"
            android:lines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#888"
            android:textSize="15sp"
            tools:ignore="RelativeOverlap,RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="25dp"
                android:text="@string/dialog_time_span_picker_hours"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15sp" />

            <NumberPicker
                android:id="@+id/numPickerHours"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:scaleX="1.4"
                android:scaleY="1.3"
                android:solidColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="25dp"
                android:text="@string/dialog_time_span_picker_minutes"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15sp" />

            <NumberPicker
                android:id="@+id/numPickerMinutes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:scaleX="1.4"
                android:scaleY="1.3"
                android:solidColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="25dp"
                android:text="@string/dialog_time_span_picker_seconds"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15sp" />

            <NumberPicker
                android:id="@+id/numPickerSeconds"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:scaleX="1.4"
                android:scaleY="1.3"
                android:solidColor="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#fff"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnCancel"
            style="@style/MaterialDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_btn_cancel" />

        <Button
            android:id="@+id/btnOK"
            style="@style/MaterialDialogButton"
            android:layout_width="65sp"
            android:layout_height="wrap_content"
            android:text="@string/general_btn_ok" />

    </LinearLayout>

</LinearLayout>
