<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimary"
        android:padding="8dp">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/project_information"
            android:textColor="#fff"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/imgbtnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/flat_ripple_circle"
            android:contentDescription="@string/general_btn_close"
            android:padding="8dp"
            android:src="@mipmap/ic_close_black"
            android:tint="#fff" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/primary_app_gradient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="22dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/general_name"
                    android:textColor="#aaa"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/lblProjectName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#333"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <View
                style="@style/DividerLight"
                android:layout_marginBottom="22dp"
                android:layout_marginTop="22dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/general_description"
                    android:textColor="#aaa"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/lblProjectDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#333"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <View
                style="@style/DividerLight"
                android:layout_marginBottom="22dp"
                android:layout_marginTop="22dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/project_display_created"
                    android:textColor="#aaa"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/lblProjectCreateDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#333"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
